--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,27 +80,29 @@ header{
 
 .content1 > div2 {
     display: flex; 
+    border-top: 1px solid black;
     border-bottom: 1px solid black;
     flex: 2; 
     align-items: left; 
     font-size: 10pt;
     text-align: left;
 }
-.content1 > div2 > h2 {
+.content1 > div2 table {
     padding-left: 80px;
+    text-align: center;
 }
-.content1 > div2 > h3 {
-    padding-top: 80px;
+.content1 div2 table td {
     padding-left: 80px;
-    align-content: left;
-    align-items: left;
+    text-align: center;
 }
-.lingkaran1{
-    width: 90px;
-    height: 90px;
-    font-size: 14pt;
-    border-block: 1px solid black;
-    border-radius: 100%;
+.lingkaran1 {   
+    width: 120px;
+    height: 120px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .content2 {
     padding-left: 80px;
